--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,22 +30,41 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # 5. Lance un serveur statique pour ton HTML
+      # 5. Lance le serveur du site (site_web) sur le port attendu par Playwright
       - name: Start static server
         run: |
-          npm install -g serve
-          serve . -l 3000 &
+          npm run start &
+
+      # 6. Attend que le serveur soit prêt
+      - name: Wait for server
+        run: |
+          for i in {1..30}; do
+            if curl -fsS http://127.0.0.1:3001 > /dev/null; then
+              echo "Server is up"
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "Server did not start in time"
+          exit 1
       
-      # 6. Lance les tests Playwright
+      # 7. Lance les tests Playwright
       - name: Run Playwright tests
         run: npx playwright test
-        env:
-          BASE_URL: http://localhost:3000
 
-      # 7. Upload du rapport Playwright (toujours, même si tests KO)
+      # 8. Upload des rapports et résultats (toujours, même si tests KO)
       - name: Upload Playwright Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
+
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-artifacts
+          path: |
+            artifacts
+            test-results
